--- a/Aplomb_Admin/Content/Site.css
+++ b/Aplomb_Admin/Content/Site.css
@@ -57,3 +57,8 @@ input[type="checkbox"].input-validation-error {
         content: " •  ";
     }
 }
+
+#fieldList .fieldConfig > .panel {
+    margin-top: 1em;
+    margin-bottom: 0;
+}
